# GregTech6-Translation-Groupware

./: .gitignore  CMakeLists.txt  DictGenerator.cpp  DictGenerator.hpp  Generator.cpp  Generator.hpp  LICENSE  README.md  ReplacerConfig.cpp  ReplacerConfig.hpp  main.cpp
doc/: quick-start.md
src/: DictGenerator.cpp  DictGenerator.hpp  Generator.cpp  Generator.hpp  GeneratorMeta.cpp  GeneratorMeta.hpp  IGeneratorMeta.cpp  IGeneratorMeta.hpp  ILangResult.hpp  Replacer.cpp  Replacer.hpp  ReplacerConfig.cpp  ReplacerConfig.hpp  Rule.cpp  Rule.hpp  RuleGenerator.cpp  main.cpp
src/config/: Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  RuntimeOptions.cpp  RuntimeOptions.hpp
src/generator/: DictGenerator.cpp  DictGenerator.hpp  Generator.cpp  Generator.hpp  Rule.cpp  Rule.hpp  RuleGenerator.cpp  RuleGenerator.hpp
src/generators/: DictGenerator.hpp  Rule.hpp  RuleGenerator.hpp
src/lang/: DictLangResult.cpp  DictLangResult.hpp  ILangResult.cpp  ILangResult.hpp  LangFile.cpp  LangFile.hpp  LangResult.cpp  LangResult.hpp  RuleLangResult.cpp  RuleLangResult.hpp
src/lang_result/: DictLangResult.cpp  DictLangResult.hpp  ILangResult.cpp  ILangResult.hpp  LangResult.cpp  LangResult.hpp  RuleLangResult.cpp  RuleLangResult.hpp
src/meta/: GeneratorMeta.cpp  GeneratorMeta.hpp  IGeneratorMeta.cpp  IGeneratorMeta.hpp  IGroupRepository.cpp  IGroupRepository.hpp  NSGeneratorMeta.cpp  NSGeneratorMeta.hpp
workplace/: config.yml
workplace/zh/: GregTech.fallback.lang
